[package]
name = "rust-story"
version = "0.1.0"
authors = ["bulgogi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"]  }
serde_json = "1.0"
json_pretty = "*"
rand = "0.7.3"
